Fixed image overflow for larger DALL-E Images
Fixed overflow behavior for DALL-E images that are larger than the message bubble.

--- a/index.scss
+++ b/index.scss
@@ -330,7 +330,7 @@ button {
         color: #f0f0f0;
 
 
-        // overflow: hidden;
+        overflow: auto;
         text-overflow: clip;
 
         .label {
